src/features/ThreadCard/ThreadCard.css
/* Global */
.ThreadCard,
.SkeletonThreadCard,
.ErrorPage,
.subredditInfoContainer,
.CommentCard {
  --radius: 5px;
  --border: 5px;
  border-radius: calc(var(--radius) + var(--border));
  display: flex;
  flex-direction: column;
  margin: 5px auto;
  line-height: 1.5;
  box-shadow: 2px 2px 5px black;
  max-width: 100%;
  overflow: hidden;
  background-color: lightgray;
  width: 100%;
}

.ThreadCard:first-child,
.SkeletonThreadCard:first-child {
  margin-top: calc(var(--appbar-height) + 0.5rem);
}

/* Skeleton */

.skeletonContent {
  background-color: slategray;
  padding: 3px;
  color: slategray;
  border-radius: 5px;
  margin: 3px;
}

.skeletonImg {
  height: 300px;
}

/* Header */
.threadCardHeader,
.commentHeader {
  height: fit-content;
  display: grid;
  grid-template-columns: auto 1fr;
  width: auto;
  justify-content: space-between;
  line-height: 0.8rem;
  background: radial-gradient(ellipse at top left, #ffffff, lightgray);
  padding: 0.3rem;
}
.subredditName {
  font-weight: bold;
}
.subredditIcon {
  border-radius: 50%;
  border: 2px solid black;
  height: 36px;
  width: 36px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: linear-gradient(45deg, rgba(0, 0, 255, 0.507), white);
}

.threadCardHeader img {
  width: 2rem;
  height: 2rem;
}
.subredditIcon.subreddit {
  display: none;
}

.ThreadCardHeaderText {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-around;
  width: 100%;
  margin-left: 5px;
}

.ThreadCard .subtext {
  font-size: 0.8rem;
}

.ThreadCard .timestamp {
  align-items: center;
  justify-content: end;
  display: flex;
}

/* BODY */

.ThreadCard .threadPreview {
  display: flex;
  flex-direction: column;
  font-weight: bold;
  width: 100%;
}

.ThreadCard .threadTitle {
  margin: 0 0.3rem;
}
.previewImage {
  max-width: 100%;
}

.ThreadCard .threadPreview .thumbnail {
  width: 96px;
  float: left;
  border-radius: var(--radius);
  margin-right: 0.5rem;
  background-color: #ffffff;
}

.ThreadCard .vid-audio-message {
  font-style: italic;
  font-weight: normal;
  font-size: 0.8em;
}

.centered {
  display: flex;
  flex-direction: column;
  place-items: center;
}

.react-player__preview {
  background-size: contain !important;
  background-repeat: no-repeat;
}
.ThreadCard .readMore {
  width: fit-content;
}

.__embed {
  max-height: 80vh;
}

.__embed iframe {
  max-height: 80vh;
}

.postFlairContainer {
  float: left;
  display: flex;
  font-weight: normal;
  width: fit-content;
  justify-content: center;
  align-items: center;
  margin: 0 0.3rem;
}

.postFlair {
  padding: 0px 0.5rem;
  border-radius: 1rem;
  height: 1.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.flairAndTitle {
  margin: var(--border);
}

.fullText {
  display: none;
}

.galleryThumbnailBox {
  display: flex;
  flex-direction: column;
  float: left;
  font-weight: normal;
  font-size: 0.8rem;
  align-items: center;
  justify-content: center;
  background-color: white;
  padding: 3px 3px 0 3px;
  margin-right: 0.5rem;
  border-radius: var(--border);
}

.galleryThumbnailBox:hover {
  background-color: aliceblue;
}

.galleryThumbnailBox .thumbnail {
  float: unset !important;
  margin: 0 !important;
}

.galleryText,
.selfTitle {
  margin-left: 1rem;
}

.previewText,
.fullText {
  font-weight: normal;
  grid-column: 1/3;
}

/* Footer */
.viewComments {
  display: flex;
  height: 2rem;
  padding: 5px;
  gap: 0.5rem;
  align-items: center;
  border-radius: 10px;
  font-size: 0.9rem;
  width: max-content;
}

.ThreadCard .threadContentPreview {
  display: flex;
  flex-direction: column;
  background-color: lightgray;
}

.ThreadCard .threadFooter {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  background: radial-gradient(ellipse at top left, #ffffff, lightgray);
}

